[package]
name = "mahler-wasm"
description = "WASM compiled utilities for Mahler"
version = "0.1.0"
authors = ["Balena Inc. <hello@balena.io>"]
repository = "https://github.com/balena-io-modules/mahler-wasm/"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"

json-patch = "1.0.0"
serde_json = "1.0.104"
gloo-utils = { version = "0.2.0", features = ["serde"] }
tsify = "0.4.5"
serde = "1.0.183"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
